k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ci-tannaz
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80         # service port
      targetPort: 80   # container port
